# c-project

./: README.md  base.lua
server/: CMakeLists.txt  server.sln
server/agent/: CMakeLists.txt  CMakeLists.txt.bak  agent.cpp  agent.vcxproj  agent.vcxproj.filters  agentclientsocket.cpp  agentclientsocket.h  agentconfig.cpp  agentconfig.h  agentroutersocket.cpp  agentroutersocket.h  agentserver.cpp  agentserver.h  wsclientsocket.cpp  wsclientsocket.h  wssclientsocket.cpp  wssclientsocket.h
server/common/: CMakeLists.txt  CMakeLists.txt.bak  billthread.cpp  billthread.h  boostsignal.h  codebase.cpp  codebase.h  common.vcxproj  common.vcxproj.filters  common_api.cpp  common_api.h  configmanager.cpp  configmanager.h  continertraits.h  datetime.cpp  datetime.h  define.h  epollthread.cpp  epollthread.h  errorcode.h  filterword.cpp  filterword.h  functionevent.h  listensocket.cpp  listensocket.h  loadcfgbase.h  localsingleton.h  log.cpp  log.h  logthread.cpp  logthread.h  msgbase.cpp  msgbase.h  msgmanager.cpp  msgmanager.h  mysqlcallback.h  mysqlevent.cpp  mysqlevent.h  mysqlmanager.cpp  mysqlmanager.h  (+42 more)
server/game/: CMakeLists.txt  game.cpp  game.vcxproj  game.vcxproj.filters  gameconfig.cpp  gameconfig.h  gameroutersocket.cpp  gameroutersocket.h  gameserver.cpp  gameserver.h  httpreqsocket.cpp  httpreqsocket.h  httpsreqsocket.cpp  httpsreqsocket.h  pkgbase.cpp  pkgbase.h  role.cpp  role.h  rolepkg.cpp  rolepkg.h
server/httpserver/: CMakeLists.txt  httpclientsocket.cpp  httpclientsocket.h  httpconfig.cpp  httpconfig.h  httpmain.cpp  httproutersocket.cpp  httproutersocket.h  (+4 more)
(+67 files in other folders)
