cmake_minimum_required(VERSION 2.8)
#SET(CXX /home/mzy/work/clang/build/Release+Asserts/bin/clang++)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
SET(LIBRARY_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)
ADD_DEFINITIONS("-std=c++17 -O2 -ggdb3 -Wall -DNDEBUG")
ADD_SUBDIRECTORY(./agent)
ADD_SUBDIRECTORY(./game)
ADD_SUBDIRECTORY(./httpserver)
ADD_SUBDIRECTORY(./router)
ADD_SUBDIRECTORY(./common)
add_dependencies(agent common)
add_dependencies(game common)
add_dependencies(httpserver common)
add_dependencies(router common)
